Refactor the dem module